@@ -21,6 +21,15 @@ that's common in other DNS servers.
 
 The limits can be adjusted for different packet origins using :option:`price-factor <price-factor: <float>` in :ref:`views <config-views>`.
 
+.. option:: rate-limiting/enabled: true|false
+
+  :default: false
+
+  Enable rate limiting.
+  
+  To start using rate limiting, you need to set at least the :option: `rate-limit <rate-limiting/rate-limit: <int>>` which has no default value.
+
+
 .. option:: rate-limiting/rate-limit: <int>
 
     Maximal allowed number of UDP queries per second from a single IPv6 or IPv4 address.
