@@ -28,6 +28,7 @@ Incompatible changes
   - /dnssec/trust-anchor-signal-query -> /dnssec/signal-query
   - /logging/dnssec-bogus -> /dnssec/log-bogus
   - /network/tls/files-watchdog -> /network/tls/watchdog
+  - /rate-limiting -> /rate-limiting/enabled
 
 
 Knot Resolver 6.0.15 (2025-07-17)
